syntax = "proto3";
package remote_storage;

message CreateParams {
    string remote_key_name = 1;
    bool is_public = 2;
    bytes payload = 3;
}
